--- a/PathFinder/src/app/node/node.component.html
+++ b/PathFinder/src/app/node/node.component.html
@@ -1,8 +1,8 @@
 <button type="button" class="btn"
 [class.btn-warning]="isStart"
-[class.btn-secondary]="!visited && !isFinish && !isStart && !isWall && !isPath"
+[class.btn-secondary]="!animated && !isFinish && !isStart && !isWall && !isPath"
 [class.btn-success]="isFinish"
-[class.btn-primary]="!isPath && visited"
+[class.btn-primary]="!isPath && animated"
 [class.btn-dark]="isWall"
 [class.btn-danger]="isPath && !isStart && !isFinish"
-(click)="makeWall()"></button>
+(mousedown)="makeWall()" (mouseup)="makeWall()"></button>
