--- a/PathFinder/src/app/grid/grid.component.html
+++ b/PathFinder/src/app/grid/grid.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar navbar-info bg-info">
   <span class="navbar-brand mb-0 h1">&nbsp; &nbsp; &nbsp; &nbsp; Welcome! Make walls, and find the shortest path between two points!</span>
+  <button type="button" class="btn btn-dark" (click)="clearBoard()">Clear</button>
 </nav>
 <div id="button">
-  <button id="dijkstra" type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showDijkstra()">Dijkstra</button>
+  <button type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showDijkstra()">Dijkstra</button>
 </div>
 <main>
   <div *ngFor="let column of board" class="row">
