--- a/PathFinder/src/app/grid/grid.component.html
+++ b/PathFinder/src/app/grid/grid.component.html
@@ -6,6 +6,8 @@
 <div id="button" class="row">
   <button type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showDijkstra()">Dijkstra Algorithm</button>
   <button type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showAStar()">A Star Algorithm</button>
+  <button type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showBreadth()">Breadth First Search</button>
+  <button type="button" class="btn btn-primary btn-lg mt-4 ml-3" (click)="showDepth()">Depth First Search</button>
 </div>
 <main>
   <div *ngFor="let column of board" class="row">
