--- a/PathFinder/src/app/grid/grid.component.html
+++ b/PathFinder/src/app/grid/grid.component.html
@@ -19,6 +19,7 @@
     <app-node *ngFor="let node of column" [i]="node.i" [j]="node.j" [isFinish]="node.isFinish" [isStart]="node.isStart"
     [isWall]="node.isWall" [visited]="node.visited" [previousNode]="node.previousNode" [distance]="node.distance" [isPath]="node.isPath"
     [animated]="node.animated" [mousePressed]="mouseState" [f]="node.f" [g]="node.g" [h]="node.h" [neighbors]="node.neighbors"
-    [drag]="dragAndDrop" [animation]="animation" (send)="showBoard($event)" (mouse)="changeMouse($event)"></app-node>
+    [drag]="dragAndDrop" [animation]="animation" (send)="showBoard($event)" (mouse)="changeMouse($event)" 
+    (animateAgain)="animateAgain()"></app-node>
   </div>
 </main>
