--- a/PathFinder/src/app/node/node.component.css
+++ b/PathFinder/src/app/node/node.component.css
@@ -60,3 +60,32 @@ button { width: 100%; height: 100%; font-size: 5em !important; }
     background-color: rgb(255, 254, 106);
   }
 }
+
+
+.node-wall {
+  animation-name: walls;
+  animation-duration: 1.5s;
+  animation-timing-function: ease-out;
+  animation-delay: 0;
+  animation-direction: alternate;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+}
+
+@keyframes walls {
+  0% {
+    transform: scale(0.6);
+    background-color:#292b2c;
+  }
+
+  50% {
+    transform: scale(1.2);
+    background-color: #292b2c;
+  }
+
+  100% {
+    transform: scale(1);
+    background-color: #292b2c;
+  }
+}
